--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "prueba",
+  "name": "m87-extension",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@types/webextension-polyfill": "^0.10.0",
-    "@vitejs/plugin-vue": "^4.5.0",
-    "typescript": "~5.6.3",
-    "vite": "^5.0.0",
-    "vite-plugin-web-extension": "^4.0.0",
-    "vue-tsc": "^1.2.0",
-    "webextension-polyfill": "^0.10.0"
-  },
-  "trustedDependencies": [
-    "spawn-sync"
-  ]
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/webextension-polyfill": "^0.12.3",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "tailwindcss": "^4.1.4",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.0",
+    "vite-plugin-web-extension": "^4.4.3",
+    "vue-tsc": "^2.2.8",
+    "webextension-polyfill": "^0.12.0"
+  }
 }
