--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "vite-plugin-web-extension": "^4.4.3",
     "vue-tsc": "^2.2.8",
     "webextension-polyfill": "^0.12.0"
-  }
+  },
+  "trustedDependencies": [
+    "spawn-sync"
+  ]
 }
